fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   background-color: var(--bg-white);
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 h1 {
